--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -8,6 +8,22 @@
 
 const logout = async (e) => {
 //Include the code for logout here.
+let logout_url = window.location.origin+"/djangoapp/logout";
+  const res = await fetch(logout_url, {
+    method: "GET",
+  });
+
+  const json = await res.json();
+  if (json) {
+    let username = sessionStorage.getItem('username');
+    sessionStorage.removeItem('username');
+    window.location.href = window.location.origin;
+    window.location.reload();
+    alert("Logging out "+username+"...")
+  }
+  else {
+    alert("The user could not be logged out.")
+  }
 };
 
 let checkSession = ()=>{
@@ -25,8 +41,8 @@ let checkSession = ()=>{
  }
 </script>
 </head>
-<body onload="checkSession()">
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
+<body onload="checkSession()" class="div-main">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#06fe76; height: 1in;">
   <div class="container-fluid">
     <h2 style="padding-right: 5%;">Dealerships</h2>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,9 +72,14 @@ let checkSession = ()=>{
   <img src="static/car_dealership.jpg" class="card-img-top" alt="...">
   <div class="banner">
     <h5>Welcome to our Dealerships!</h5>
-    <a href="/dealers" class="btn" style="background-color: aqua;margin:10px">View Dealerships</a>
+    <a href="/dealers" class="btn" style="background-color: #06ff76:10px">View Dealerships</a>
   </div>
 </div>
 </div>
 </body>
+<footer class="bg-dark text-white py-3">
+  <div class="container text-center">
+    &copy; 2024 Best Cars. All rights reserved.
+  </div>
+</footer>
 </html>
